Wed Sep 29 18:34:22 1993  Stu Grossman  (grossman at cygnus.com)

	* Makefile.in:  Add deps for i386lynx-nat.o and i386lynx-tdep.o to
	keep non-gnu makes happy.

Wed Sep 29 10:52:19 1993  Kung Hsu  (kung@cygnus.com)

	* c-valprint.c: to fix virtual table print bug (pr2695).

Wed Sep 29 10:52:19 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* target.c (target_detach): Call generic_mourn_inferior.
	* inflow.c (generic_mourn_inferior): Call flush_cached_frames.

Tue Sep 28 23:08:59 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* dbxread.c, coffread.c, elfread.c: A few changes to comments.

Tue Sep 28 18:39:37 1993  Stan Shebs  (shebs@rtl.cygnus.com)

	* configure.in: Rename ...-lynx* to ...-lynxos*.
	Add m68*-*-lynxos* configuration.
	* dbxread.c (coffstab_build_psymtabs): New function,
	interfaces coffread.c to dbxread functions.
	* coffread.c (coff_symfile_info):  Expand to include
	dbx_symfile_info slots.
	(coff_symfile_init): Init coff_symfile_info struct.
	(coff_locate_sections): New functions, finds the stab and stabstr
	sections.
	(coff_symfile_read): Call coffstab_build_psymtabs if a stab
	section is present.
	(coff_section_offsets): Replace fake version with real offsets.

Tue Sep 28 18:00:50 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* infcmd.c (run_stack_dummy): Set the frame in the bp_call_dummy
	breakpoint.

Tue Sep 28 17:53:26 1993  Ian Lance Taylor  (ian@tweedledumb.cygnus.com)

	* config/nm-sysv4.h: Include solib.h.  Define SVR4_SHARED_LIBS.
	* config/tm-sysv4.h: Don't include solib.h.
	* config/xm-sysv4.h: Don't define SVR4_SHARED_LIBS.
	* config/i386/i386v4.mt (TDEPFILES): Move solib.o from here...
	* config/i386/i386v4.mh (NATDEPFILES): ...to here.
	* config/i386/nm-i386v4.h: Include nm-sysv4.h.
	* config/m68k/amix.mt (TDEPFILES): Move solib.o from here...
	* config/m68k/amix.mh (NATDEPFILES): ...to here.

Tue Sep 28 09:45:38 1993  Peter Schauer  (pes@regent.e-technik.tu-muenchen.de)
